# numeric_constant_traits

./: Cargo.toml  README.md
src/: gen.py  lib.rs
