[package]
name = "numeric_constant_traits"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
description = "Traits for generic numeric constants"
repository = "https://github.com/PanieriLorenzo/numeric_constant_traits/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
